Change surprise image from canvas to img

--- a/index.html
+++ b/index.html
@@ -7,10 +7,8 @@
     <title>Scratch-Off Surprise</title>
 </head>
 <body>
-    <div style="position: relative;" id="frame">
-        <canvas id="imageCanvas"></canvas>
-        <canvas id="overlayCanvas" style="position: absolute; top: 0; left: 0;"></canvas>
-    </div>
+    <img id="surpriseImage" src="images/duck.jpg" alt="Surprise image.">
+    <canvas id="overlayCanvas"></canvas>
     <script src="scripts.js"></script>
 </body>
 </html>
