Add reset button

--- a/index.html
+++ b/index.html
@@ -7,8 +7,11 @@
     <title>Scratch-Off Surprise</title>
 </head>
 <body>
-    <img id="surpriseImage" src="images/duck.jpg" alt="Surprise image.">
-    <canvas id="overlayCanvas"></canvas>
+    <div class="image-container">
+        <img id="surpriseImage" src="images/duck.jpg" alt="Surprise image.">
+        <canvas id="overlayCanvas"></canvas>
+        <button id="resetButton">RESET</button>
+    </div>
     <script src="scripts.js"></script>
 </body>
 </html>
