Update CSS to fix button positioning

--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
     <div class="image-container">
         <img id="surpriseImage" src="images/duck.jpg" alt="Surprise image.">
         <canvas id="overlayCanvas"></canvas>
+    </div>
+    <div class="buttons-container">
         <button id="resetButton">RESET</button>
     </div>
     <script src="scripts.js"></script>
