Refactor CSS to follow best practices and adjust desktop button alignment

--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 </head>
 <body>
     <div class="image-container">
-        <img id="surpriseImage" src="images/duck.jpg" alt="Surprise image.">
-        <canvas id="overlayCanvas"></canvas>
+        <img id="surpriseImage" class="surprise" src="images/duck.jpg" alt="Surprise image.">
+        <canvas id="overlayCanvas" class="surprise"></canvas>
 
         <!-- Themes modal -->
         <div id="themesModal" class="modal">
